CLI: Add add-artifact command